compiler/testData/cli/jvm/extraArgCommonChecks/extraArgumentMultiple.out
warning: argument '-Xexplicit-api' is passed multiple times: 'warning', 'strict'. The last value will be used.
compiler/testData/cli/jvm/extraArgCommonChecks/simple.kt:1:1: error: visibility must be specified in explicit API mode.
fun foo() = "hello"
^^^^^^^
compiler/testData/cli/jvm/extraArgCommonChecks/simple.kt:1:5: error: return type must be specified in explicit API mode.
fun foo() = "hello"
    ^^^
COMPILATION_ERROR
